<resources>
    <string name="app_name">一起倒计时</string>
    <string name="delete_a_line">删 除</string>
    <string name="add_timer">添 加</string>
    <string name="timer_to_time">距 %s</string>
    <string name="update_timer">编 辑</string>
    <string name="totop_timer">置 顶</string>
    <string name="create_person_count_down_timer">创建个人倒计时</string>
    <string name="create_team_count_down_timer">创建组</string>
    <string name="text_create_one_timer">创建一个倒计时</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="create_timer_time">日期：</string>
    <string name="create_timer_name">主题：</string>
    <string name="create_timer_time_time">时间：</string>
    <string name="et_select_one_date">选择一个日期</string>
    <string name="et_select_one_time">选择一个时间</string>
    <string name="create_timer_nickname">我的倒计时</string>
    <string name="create_group_timer">创建一个组</string>
    <string name="create_group_nickname">我的小组</string>
    <string name="detail_timer_name_example">这是一句标准的十个字再加五个字</string>
    <string name="detail_timer_number_example">123456</string>
    <string name="detail_timer_list_str">倒计时列表</string>
    <string name="detail_timer_manage_str">管理</string>
    <string name="detail_timer_member_title">以下成员在组中：</string>
    <string name="detail_show_all_group_man">查看所有</string>
    <string name="string_group_name">组名：</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录 或 注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">账号</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_to_use">欢迎使用</string>
    <string name="input_type_filter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="tv_welcome">欢迎您！</string>
    <string name="tv_login_from_here">点击此处登录</string>
    <string name="creater_timer_desc_title">描述：</string>
    <string name="create_timer_desc_content">点击此处编辑</string>
    <string name="btn_text_sb_input">文本识别输入</string>
    <string name="btn_voice_input">语音输入</string>
    <string name="no_one_timer">你还没有创建任何个人倒计时哦~\n点这里去创建一个吧！</string>
</resources>
