<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            android:gravity="center"
            android:background="?attr/colorPrimary"
            />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/create_timer_name"
            />

        <EditText
            android:id="@+id/et_input_timer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_timer_nickname"
            android:enabled="true"
            android:textSize="18sp"
            android:gravity="center"
            android:singleLine="true"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/creater_timer_desc_title"
            />

        <EditText
            android:id="@+id/et_timer_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_timer_desc_content"
            android:enabled="true"
            android:focusable="false"
            android:textSize="14sp"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/create_timer_time"
            />

        <EditText
            android:id="@+id/et_input_time_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_select_one_date"
            android:enabled="true"
            android:focusable="false"
            android:textSize="18sp"
            android:gravity="center"
            android:singleLine="true"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/create_timer_time_time"
            />

        <EditText
            android:id="@+id/et_input_time_time_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_select_one_time"
            android:enabled="true"
            android:focusable="false"
            android:letterSpacing="0.2"
            android:textSize="18sp"
            android:gravity="center"
            android:singleLine="true"
            android:textStyle="bold"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_timer_create"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="创建"
        android:textColor="#fff"
        android:background="@drawable/btn_create_timer_bg"
        />
    <Button
        android:id="@+id/btn_timer_advance"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="高级设置"
        android:textColor="#fff"
        android:background="@drawable/btn_create_timer_bg"
        />


</LinearLayout>
