<?xml version="1.0" encoding="utf-8"?>
<com.mcxtzhang.swipemenulib.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/group_card_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/card_bg"
            app:cardBackgroundColor="#fff"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="8dp"
                    >

                    <TextView
                        android:id="@+id/tv_group_name"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#333"
                        android:textSize="22sp"
                        android:background="@drawable/bottom_border_bg"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </LinearLayout>

                </LinearLayout>


                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_right_arrow"
                    />

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_del_one_timer"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/swipe_button_info"
            android:text="@string/delete_a_line"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_update_one_timer"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/swipe_button_info"
            android:text="@string/update_timer"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_totop_one_timer"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/swipe_button_info"
            android:text="@string/totop_timer"
            android:textColor="@android:color/white" />
    </LinearLayout>

</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
